Feature: #622 Bookmarks Plugin: User Bookmarks can be displayed as tree.   The tree structure is generated from the Bookmarks' names and from a path separator   that can be configured at the bottom of the Bookmarks' preferences panel.   See menu File --> Global Preferences --> tab "Bookmarks" --> several bug fixes